<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
   
        <TextView
            android:id="@+id/textePoids"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textColor="#FF0000"
	        android:text="@string/poids_" />
		<EditText
	        android:id="@+id/poids"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
	        android:hint="@string/poids"
	        android:layout_toRightOf="@id/textePoids"
	        android:layout_alignParentRight="true" />
	
		
		
		<TextView
		    android:id="@+id/texteTaille"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textColor="#FF0000"
	        android:text="@string/taille_"
	        android:layout_below="@id/poids"
	        android:gravity="left" />
		<EditText
		    android:id="@+id/taille"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
	        android:hint="@string/taille"
	        android:layout_below="@id/poids"
	        android:layout_toRightOf="@id/texteTaille"
	        android:layout_alignParentRight="true" />
	
		
	
		<RadioGroup 
		    android:id="@+id/groupe"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checkedButton="@+id/radioMetre"
	        android:orientation="horizontal"
	        android:layout_below="@id/taille">
	        
		    <RadioButton 
		        android:id="@+id/radioMetre"
		        android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/metre"/>
		    <RadioButton 
		        android:id="@+id/radioCentimetre"
		        android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/centimetre" />
		</RadioGroup>
		
		
		
		<CheckBox 
		    android:id="@+id/megaFonction"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/megaFonction"
	        android:layout_below="@id/groupe" />
		
		
		
		
		<Button 
		    android:id="@+id/calculerIMC"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dip"
	        android:text="@string/calculerIMC"
	        android:layout_below="@id/megaFonction" />
		<Button
		    android:id="@+id/raz" 
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/raz"
	        android:layout_marginRight="25dip"
	        android:layout_below="@id/megaFonction"
			android:layout_alignRight="@id/poids"
	        />
		
		
		
		
		<TextView 
		    android:id="@+id/texteResultat"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/resultat"
	        android:layout_below="@id/calculerIMC"
	        android:layout_marginTop="25dip" />
		<TextView 
		    android:id="@+id/result"
		    android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_below="@id/texteResultat"
	        android:layout_toRightOf="@id/texteResultat" />

</RelativeLayout>
